add soft delete and filter active/inactive records in getAll
